# gpu-libs

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  Main.cpp
libs/: CMakeLists.txt
libs/cl/: CMakeLists.txt
libs/cl/include/: CLManager.h  Host.h
libs/cl/src/: CLData.cpp  CLManager.cpp  CLManagerHelper.cpp  Host.cpp
libs/kern/: CMakeLists.txt
libs/kern/include/: Kernel.h  KernelManager.h
libs/kern/resources/: HelloWorld.cl  VectorAddition.cl
libs/kern/src/: Kernel.cpp  KernelManager.cpp  VectorAddition.cl
